# Pruebas

./: output.csv
CSV/: CMakeLists.txt  main.cpp
Codigode22agosto/: CMakeLists.txt  ListaDoble.cpp  ListaDoble.h  Nodo.cpp  Nodo.h  Persona.cpp  Persona.h  main.cpp
DivisionBin/: ArchivoDatos.cpp  ArchivoDatos.h  CMakeLists.txt  Datos.h  Estudiante.h  Materia.h  main.cpp
Examen1PrograII/: ArchivoManager.cpp  ArchivoManager.h  Biblioteca.cpp  Biblioteca.h  CMakeLists.txt  Libro.cpp  Libro.h  ListaDoble.h  Material.cpp  Material.h  Nodo.h  Revista.cpp  Revista.h  Utilities.h  main.cpp
Mediador/: CMakeLists.txt  Colaborador.h  Mediador.h  Usuario.cpp  Usuario.h  chatMediador.cpp  chatMediador.h  main.cpp
Memento/: CMakeLists.txt  main.cpp
Proyecto/Carpeta 11224-300/proyecto-programado-charlie/: CMakeLists.txt  README.md  replit.nix
Proyecto/Carpeta 11224-300/proyecto-programado-charlie/include/: AdminViewMenu.h  BaseMenu.h  BinaryFileManager.h  CsvFileManager.h  FileSubMenu.h  GradesSubMenu.h  MainMenu.h  ManagerGrade.h  ManagerStudent.h  ManagerSubject.h  Person.h  Student.h  StudentSubMenu.h  StudentViewMenu.h  Subject.h  SubjectSubMenu.h  UserInterface.h
Proyecto/Carpeta 11224-300/proyecto-programado-charlie/src/: AdminViewMenu.cpp  BaseMenu.cpp  BinaryFileManager.cpp  FileSubMenu.cpp  (+14 more)
TextUltimaPruebaDeAcentos/: CMakeLists.txt  main.cpp
archivoBinario/: Billetera.cpp  Billetera.h  CMakeLists.txt  Cliente.cpp  Cliente.h  main.cpp
archivoJson/: CMakeLists.txt  Persona.cpp  Persona.h  main.cpp
archivoTXT/: CMakeLists.txt  Persona.cpp  Persona.h  main.cpp
